--- a/TransXChange2GTFS_2/TransXChange2GTFS_2.csproj
+++ b/TransXChange2GTFS_2/TransXChange2GTFS_2.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Stops.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Stops.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="6.1.1" />
