Big bug fix and speed up
Huge improvements in processing speed and a big for dozens of bugs. Increased coverage of transport modes so that TransXChange for all GB regions can be succesfully converted to GTFS.

--- a/TransXChange2GTFS_2/TransXChange2GTFS_2.csproj
+++ b/TransXChange2GTFS_2/TransXChange2GTFS_2.csproj
@@ -7,10 +7,11 @@
 
   <ItemGroup>
     <None Remove="Stops.csv" />
+    <None Remove="Stops_unzipthis.zip" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Stops.csv">
+    <Content Include="Stops_unzipthis.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
