--- a/TransXChange2GTFS_2/TransXChange2GTFS_2.csproj
+++ b/TransXChange2GTFS_2/TransXChange2GTFS_2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.1.1" />
+    <PackageReference Include="IeuanWalker.GeoUK" Version="1.0.5" />
   </ItemGroup>
 
 </Project>
